force-app/main/default/objects/Client_Team__c/Client_Team__c.object-meta.xml
<CustomObject>
    <label>Client Team</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Client Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>