force-app/main/default/objects/Client_Team__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Team</relationshipLabel>
    <relationshipName>Client_Teams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>