force-app/main/default/objects/Client_Team__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Team</relationshipLabel>
    <relationshipName>Client_Teams</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>